# hstcal

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  bootstrap  configure.ac
.ci/m4/: pkg.m4
.github/workflows/: cmake.yml
.pytest_cache/v/cache/: lastfailed
ctegen2/: Makefile.am  ctegen2.h  ctehelpers.c
cvos/: Makefile.am
hstio/: CMakeLists.txt  Makefile.am
hstio/test/: CMakeLists.txt  test_hstio.py  test_hstio_resize_hdu.c  test_hstio_resize_hdu2.c
include/: imphttab.h  xclio.h  ximio.h  xsynphot.h  xtables.h
lib/: CMakeLists.txt  Makefile.am  hstcalversion.c
lib/calib/: CMakeLists.txt
lib/ctegen2/: CMakeLists.txt
pkg/: Makefile.am
pkg/acs/: Makefile.am
pkg/acs/calacs/include/: acs.h  acscorr.h  acsdq.h  acserr.h  acsinfo.h  acsomit.h  acsrej.h  acsversion.h  acswild.h
pkg/acs/include/: pcte.h
pkg/acs/lib/: CMakeLists.txt  Makefile.am
pkg/acs/lib/acscte/: docte.c  dopcte-gen2.c
pkg/acs/src/: main2d.c
pkg/stis/: Makefile.am
pkg/stis/lib/: Makefile.am
pkg/stis/src/: cs8.c
pkg/wfc3/: Makefile.am
pkg/wfc3/calwf3/include/: msg.h  trl.h  wf3.h  wf3corr.h  wf3dq.h  wf3err.h  wf3info.h  wf3omit.h  wf3rej.h  wf3sum.h  wf3version.h  wf3wild.h
pkg/wfc3/calwf3/lib/: cool.c
pkg/wfc3/calwf3/wf32d/: get2dsw.c
pkg/wfc3/include/: wf3corr.h
pkg/wfc3/lib/: Makefile.am
tables/: Makefile.am
tests/: helpers.py
tests/acs/: test_hrc.py  test_wfc.py
tests/utils/: test_helpers.py
tests/wfc3/: test_ir_01.py
