lib_LTLIBRARIES = libhsttables.la
libhsttables_la_SOURCES = \
	c_tbept.c \
	c_tbcinf.c \
	c_imt.c \
	tbl_util.c \
	c_tbfres.c \
	c_tbtacc.c \
	c_tbagt.c \
	addCol.c \
	c_tbtclo.c \
	c_tbhgt.c \
	c_phopar.c \
	initCol.c \
	tbSaveInfo.c \
	cerror.c \
	c_tbhad.c \
	c_tbparse.c \
	ctables.c \
	c_tbtnam.c \
	c_tbhgcm.c \
	c_tbegt.c \
	tbCopyTmpl.c \
	c_tbrudf.c \
	c_irafinit.c \
	c_tbrcsc.c \
	c_vfn2osfn.c \
	c_tbapt.c \
	tbHeader.c \
	c_tbfpri.c \
	c_tbcfnd1.c \
	c_tbrgtr.c \
	c_tbpsta.c \
	c_tbhpcm.c \
	c_tbciga.c \
	c_tbcigi.c \
	c_tbtopn.c \
	c_tbtcre.c \
	c_tbcigt.c \
	c_tbhgnp.c \
	c_tbcnum.c \
	c_tbhptt.c \
	c_tbcdef1.c \
	c_tbhcal.c
libhsttables_la_CFLAGS = -I$(top_srcdir)/include -I$(buildir)
