lib_LTLIBRARIES = libhstacs.la
libhstacs_la_SOURCES = \
	acs2d/acs2d.c \
	acs2d/do2d.c \
	acs2d/dodark.c \
	acs2d/doflash.c \
	acs2d/doflat.c \
	acs2d/dononlin.c \
	acs2d/dophot.c \
	acs2d/doshad.c \
	acs2d/dospot.c \
	acs2d/get2dflags.c \
	acs2d/get2dsw.c \
	acs2d/getlintab.c \
	acs2d/getspottab.c \
	acs2d/photmode.c \
	acs2d/sanity2d.c \
	acsccd/acsccd.c \
	acsccd/blev_funcs_postsm4.c \
	acsccd/blevdrift.c \
	acsccd/blevfit.c \
	acsccd/doatod.c \
	acsccd/dobias.c \
	acsccd/doblev.c \
	acsccd/doccd.c \
	acsccd/dofwsat.c \
	acsccd/dosink.c \
	acsccd/findblev.c \
	acsccd/findover.c \
	acsccd/getacsflag.c \
	acsccd/getccdsw.c \
	acscte/acscte.c \
	acscte/docte.c \
	acscte/domaincte.c \
	acscte/dopcte-gen2.c \
	acscte/dopcte.c \
	acscte/getcteflag.c \
	acscte/getctesw.c \
	acscte/pcte_fixycte.c \
	acscte/pcte_funcs.c \
	acshist.c \
	acsinfo.c \
	acsrej/acsrej.c \
	acsrej/acsrej_check.c \
	acsrej/acsrej_do.c \
	acsrej/acsrej_init.c \
	acsrej/acsrej_loop.c \
	acsrej/acsrej_sky.c \
	acsrej/cr_history.c \
	acsrej/cr_mode.c \
	acsrej/cr_scaling.c \
	acsrej/piksrt.c \
	acsrej/readpar.c \
	acsrej/rej_command.c \
	acssect.c \
	acssum/acssum.c \
	calacs/acsdth.c \
	calacs/acsinit.c \
	calacs/acsmember.c \
	calacs/acstable.c \
	calacs/calacs.c \
	calacs/getflags.c \
	calacs/getnewref.c \
	calacs/getsciinfo.c \
	calacs/refexist.c \
	calacs/sciflags.c \
	addk2d.c \
	bin2d.c \
	bincoords.c \
	binupdate.c \
	comparenum.c \
	defswitch.c \
	detchip.c \
	detnsegn.c \
	div1d.c \
	dodqi.c \
	donoise.c \
	dostat.c \
	err.c \
	fileexists.c \
	findbin.c \
	findroot.c \
	fromlt.c \
	getacsgrp.c \
	getacskeys.c \
	getccdtab.c \
	getcorner.c \
	getlt.c \
	getrefname.c \
	getswitch.c \
	gotfilename.c \
	imghistory.c \
	imgpedigree.c \
	initmulti.c \
	interp1d.c \
	interpinfo.c \
	key.c \
	loadhead.c \
	logprogress.c \
	lowcase.c \
	median.c \
	mkname.c \
	mkoutname.c \
	mkspt.c \
	mult1d.c \
	multk1d.c \
	multk2d.c \
	omitstep.c \
	parseamps.c \
	parsedate.c \
	prinfo.c \
	reffiles.c \
	rowpedigree.c \
	sameint.c \
	spline.c \
	streqic.c \
	sub1d.c \
	sub2d.c \
	tabhistory.c \
	tabpedigree.c \
	timestamp.c \
	toelectrons.c \
	trim2d.c \
	trim.c \
	ucalver.c \
	ufilename.c \
	unbinline.c \
	whicherror.c
libhstacs_la_CFLAGS = -I$(top_srcdir)/include -I$(builddir)/../include -I$(builddir)/include -I$(srcdir)/../include
